Ref: change error handling on repositories/schedule.go and add status code 404 in handler
