# docs/swagger.yaml
@@ -90,6 +90,10 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/rest.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/rest.ErrorResponse'
         "500":
           description: Internal Server Error
           schema:
@@ -116,6 +120,10 @@ paths:
             $ref: '#/definitions/rest.StudyProgramsResponseSuccess'
         "400":
           description: Bad Request
+          schema:
+            $ref: '#/definitions/rest.ErrorResponse'
+        "404":
+          description: Not Found
           schema:
             $ref: '#/definitions/rest.ErrorResponse'
         "500":
